rustdocs/errors/rust-bitcoin-consensus_encoding-src-encode-mod.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
  --> ../rust-bitcoin/consensus_encoding/src/encode/encoders.rs:14:5
   |
14 | use internals::array_vec::ArrayVec;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  --> ../rust-bitcoin/consensus_encoding/src/encode/mod.rs:5:1
   |
 5 + extern crate internals;
   |

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/consensus_encoding/src/encode/encoders.rs:15:5
   |
15 | use internals::compact_size;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  --> ../rust-bitcoin/consensus_encoding/src/encode/mod.rs:5:1
   |
 5 + extern crate internals;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
